<i>Current bot version:</i> <b>v0.1.0.b2.release</b>
<i>Changelog:</i>
- The bot SHOULD now be infinitely polling